--- a/index.html
+++ b/index.html
@@ -5,344 +5,93 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Alquiler · Viviendas del Sur</title>
-  <meta name="description"
-    content="Apartamento en alquiler en Viviendas del Sur (Itagüí). Mira el video, revisa el mapa y contáctame por WhatsApp." />
-  <meta name="theme-color" content="#0ea5e9" />
-  <link rel="preconnect" href="https://www.youtube.com" />
-  <link rel="preconnect" href="https://i.ytimg.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <meta name="description" content="Vivienda con local en alquiler (primer piso) en Viviendas del Sur, Itagüí. Entrega inmediata, se permiten mascotas, al lado de la cancha sintética. Video, mapa y contacto por WhatsApp o llamada." />
+  <meta name="theme-color" content="#10b981" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    html,
-    body {
-      height: 100%;
-    }
-
-    body {
-      margin: 0;
-      font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      color: #0b1220;
-      background: #0f172a;
-      line-height: 1.5;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-    }
-
     :root {
-      --bg: #0f172a;
-      --card: rgba(255, 255, 255, 0.08);
-      --card-border: rgba(255, 255, 255, 0.16);
-      --text: #e5e7eb;
-      --muted: #cbd5e1;
-      --accent: #22d3ee;
-      --accent-2: #38bdf8;
-      --shadow: 0 20px 60px rgba(0, 0, 0, 0.35);
+      --bg: #0f172a; --text: #e5e7eb; --muted:#cbd5e1; --accent: #22c55e; --accent-2: #10b981; --card: rgba(255,255,255,0.06);
     }
-
-    .bg-grad {
-      position: fixed;
-      inset: 0;
-      z-index: -1;
-      background:
-        radial-gradient(60vmax 60vmax at 20% 10%, rgba(56, 189, 248, 0.18), transparent 60%),
-        radial-gradient(60vmax 60vmax at 80% 20%, rgba(34, 211, 238, 0.18), transparent 60%),
-        radial-gradient(60vmax 60vmax at 50% 90%, rgba(99, 102, 241, 0.16), transparent 60%);
-      filter: blur(2px);
-    }
-
-    .container {
-      width: min(1100px, 92vw);
-      margin: 0 auto;
-      padding: 24px;
-    }
-
-    .header {
-      display: flex;
-      align-items: flex-start;
-      justify-content: space-between;
-      padding-top: clamp(24px, 4vw, 48px);
-      color: var(--text);
-    }
-
-    .brand .badge {
-      display: inline-block;
-      background: linear-gradient(135deg, var(--accent), var(--accent-2));
-      color: #001018;
-      font-weight: 800;
-      padding: 6px 12px;
-      border-radius: 999px;
-      letter-spacing: .3px;
-      box-shadow: var(--shadow);
-    }
-
-    h1 {
-      margin: 10px 0 4px;
-      font-size: clamp(28px, 5vw, 44px);
-      color: white;
-    }
-
-    .subtitle {
-      color: var(--muted);
-      margin: 0;
-    }
-
-    .card {
-      background: var(--card);
-      border: 1px solid var(--card-border);
-      border-radius: 20px;
-      padding: clamp(16px, 3vw, 28px);
-      box-shadow: var(--shadow);
-      backdrop-filter: blur(8px);
-      color: var(--text);
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: 1.05fr 1fr;
-      gap: clamp(16px, 3vw, 32px);
-    }
-
-    @media (max-width: 900px) {
-      .grid {
-        grid-template-columns: 1fr;
-      }
-    }
-
-    .intro h2 {
-      margin: 0 0 8px;
-      font-size: clamp(22px, 3.6vw, 28px);
-      color: white;
-    }
-
-    .intro p {
-      color: var(--muted);
-      margin-top: 0;
-    }
-
-    .cta {
-      display: inline-flex;
-      align-items: center;
-      gap: 10px;
-      margin-top: 14px;
-      background: linear-gradient(135deg, var(--accent), var(--accent-2));
-      color: #031a22;
-      border: none;
-      border-radius: 14px;
-      padding: 12px 18px;
-      font-weight: 800;
-      text-decoration: none;
-      transition: transform .12s ease, box-shadow .2s ease;
-      box-shadow: 0 12px 30px rgba(56, 189, 248, 0.35);
-    }
-
-    .cta:hover {
-      transform: translateY(-1px);
-      box-shadow: 0 18px 40px rgba(56, 189, 248, 0.45);
-    }
-
-    .cta .icon {
-      width: 20px;
-      height: 20px;
-      fill: currentColor;
-    }
-
-    .cta-secondary {
-      background: transparent;
-      color: var(--text);
-      border: 2px solid var(--accent-2);
-      box-shadow: none;
-    }
-
-    .section-title {
-      margin: 0 0 10px;
-      font-size: clamp(20px, 3.2vw, 26px);
-      color: white;
-    }
-
-    .video-wrap {
-      width: 100%;
-      display: grid;
-      place-items: center;
-    }
-
-    .video {
-      width: min(420px, 100%);
-      aspect-ratio: 9/16;
-      background: rgba(255, 255, 255, 0.06);
-      border: 1px solid var(--card-border);
-      border-radius: 16px;
-      overflow: hidden;
-      box-shadow: var(--shadow);
-    }
-
-    .video iframe {
-      width: 100%;
-      height: 100%;
-      border: 0;
-      display: block;
-    }
-
-    .details {
-      margin-top: 22px;
-    }
-
-    .features {
-      list-style: none;
-      padding: 0;
-      margin: 0 0 14px;
-      display: grid;
-      gap: 8px;
-    }
-
-    .features li {
-      padding: 10px 12px;
-      background: rgba(255, 255, 255, 0.06);
-      border: 1px solid var(--card-border);
-      border-radius: 12px;
-    }
-
-    .map-card {
-      margin-top: 22px;
-    }
-
-    .map {
-      width: 100%;
-      aspect-ratio: 16/9;
-      border: 1px solid var(--card-border);
-      border-radius: 16px;
-      overflow: hidden;
-      box-shadow: var(--shadow);
-      background: rgba(255, 255, 255, 0.06);
-    }
-
-    .map iframe {
-      width: 100%;
-      height: 100%;
-      border: 0;
-    }
-
-    .footer {
-      color: var(--muted);
-      text-align: center;
-      padding-bottom: 36px;
-    }
-
-    .float-wa {
-      position: fixed;
-      right: 18px;
-      bottom: 18px;
-      z-index: 50;
-      display: inline-flex;
-      align-items: center;
-      gap: 10px;
-      text-decoration: none;
-      background: linear-gradient(135deg, var(--accent), var(--accent-2));
-      color: #031a22;
-      border-radius: 999px;
-      padding: 12px 16px;
-      font-weight: 800;
-      box-shadow: 0 14px 40px rgba(56, 189, 248, .5);
-    }
-
-    .float-wa .icon {
-      width: 22px;
-      height: 22px;
-      fill: currentColor;
-    }
+    *{box-sizing:border-box}
+    body { margin: 0; font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; background: var(--bg); color: var(--text); }
+    .container { width: min(1100px, 92vw); margin: auto; padding: 24px; }
+    .badge { display: inline-flex; align-items:center; gap: 8px; background: linear-gradient(135deg, var(--accent), var(--accent-2)); color: #03180f; font-weight: 800; padding: 6px 12px; border-radius: 999px; box-shadow: 0 10px 24px rgba(16,185,129,.35); animation: pop-in .6s ease both; }
+    h1 { margin: 10px 0 4px; font-size: clamp(28px, 5vw, 44px); color: #fff; animation: fade-up .5s .05s ease both; }
+    .subtitle { color: var(--muted); margin-top:0; animation: fade-up .5s .08s ease both; }
+    .pill-price { display: inline-flex; align-items:center; gap: 10px; background: rgba(16,185,129,0.18); border: 1px solid rgba(16,185,129,0.45); color: #d1fae5; padding: 8px 12px; border-radius: 999px; font-weight: 800; animation: fade-up .5s .1s ease both; }
+    .features { list-style: none; padding: 0; margin: 14px 0 6px; display: grid; gap: 6px; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); font-size: 0.95rem; }
+    .features li { background: var(--card); border:1px solid rgba(255,255,255,0.12); border-radius: 8px; padding: 6px 8px; display: flex; align-items: center; gap: 6px; transition: transform .12s ease, box-shadow .2s ease, border-color .2s ease; }
+    .features li:hover { transform: translateY(-1px); border-color: rgba(16,185,129,.5); box-shadow: 0 8px 20px rgba(16,185,129,.15); }
+    .cta-wrap{ margin-top: 12px; background: linear-gradient(180deg, rgba(16,185,129,.10), rgba(16,185,129,.06)); border:1px solid rgba(16,185,129,.35); border-radius: 14px; padding: 12px; box-shadow: 0 10px 28px rgba(0,0,0,.25); animation: fade-up .5s .12s ease both; }
+    .cta-title{ margin:0 0 8px; font-size: 1.05rem; color:#d1fae5; font-weight:800; display:flex; align-items:center; gap:8px }
+    .cta-row{ display:flex; gap:10px; flex-wrap:wrap }
+    .btn{ display:inline-flex; align-items:center; gap:10px; text-decoration:none; font-weight:800; padding:12px 16px; border-radius:12px; border:1px solid transparent; position:relative; overflow:hidden; isolation:isolate; }
+    .btn::after{ content:""; position:absolute; inset:auto -40% 0 -40%; height:2px; background:rgba(255,255,255,.6); transform: translateY(100%); transition: transform .45s ease; }
+    .btn:hover::after{ transform: translateY(0); }
+    .btn:active{ transform: translateY(1px); }
+    .btn-wa{ background: linear-gradient(135deg, var(--accent), var(--accent-2)); color:#052012; box-shadow: 0 12px 30px rgba(16,185,129,.35); }
+    .btn-wa .ring{ position:absolute; inset: -6px; border-radius:14px; border:2px solid rgba(5,32,18,.15); animation: pulse 1.8s ease-in-out infinite; pointer-events:none; }
+    .btn-call{ background: transparent; color: #d1fae5; border-color: rgba(16,185,129,.55); }
+    .btn-call:hover{ box-shadow: 0 10px 26px rgba(16,185,129,.2); border-color: rgba(16,185,129,.75); }
+    .icon{ width:20px; height:20px; fill: currentColor; }
+    .grid { display: grid; gap: 24px; grid-template-columns: 1fr 1fr; }
+    iframe { border: 0; width: 100%; height: 100%; border-radius: 12px; box-shadow: 0 10px 24px rgba(0,0,0,.35); }
+    @media (max-width: 900px) { .grid { grid-template-columns: 1fr; } }
+    @keyframes fade-up { from { opacity: 0; transform: translateY(8px);} to { opacity: 1; transform: translateY(0);} }
+    @keyframes pop-in { 0% { transform: scale(.96); opacity:0 } 100% { transform: scale(1); opacity:1 } }
+    @keyframes pulse { 0%,100% { box-shadow: 0 0 0 0 rgba(16,185,129,.0);} 50% { box-shadow: 0 0 0 8px rgba(16,185,129,.18);} }
+    @media (prefers-reduced-motion: reduce){ *{animation:none !important; transition:none !important} }
   </style>
 </head>
 
 <body>
-  <div class="bg-grad"></div>
-  <a class="float-wa" target="_blank" rel="noopener"
-    href="https://api.whatsapp.com/send/?phone=573114982807&text=Hola,%20estoy%20interesad@%20en%20el%20piso%20en%20Viviendas%20del%20Sur.%20%C2%BFPodr%C3%ADa%20darme%20m%C3%A1s%20informaci%C3%B3n?&type=phone_number"
-    aria-label="Abrir WhatsApp">
-    <svg viewBox="0 0 24 24" aria-hidden="true" class="icon">
-      <path
-        d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.472-.148-.672.149-.198.297-.769.966-.943 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.607.134-.133.297-.347.446-.52.149-.173.198-.297.297-.495.099-.198.05-.372-.025-.521-.074-.149-.672-1.616-.92-2.215-.243-.584-.489-.505-.672-.514l-.573-.01c-.198 0-.521.074-.793.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.095 3.2 5.076 4.487.709.306 1.262.489 1.693.626.711.226 1.358.194 1.87.118.571-.085 1.758-.718 2.006-1.41.248-.694.248-1.289.173-1.41-.074-.124-.272-.198-.57-.347zM20.52 3.48C18.192 1.153 15.21 0 12 0 5.373 0 0 5.373 0 12c0 2.116.553 4.17 1.604 5.98L0 24l6.187-1.594C7.985 23.447 10.018 24 12 24c6.627 0 12-5.373 12-12 0-3.21-1.153-6.192-3.48-8.52zM12 22.093c-1.798 0-3.553-.48-5.085-1.387l-.365-.216-3.673.946.981-3.58-.238-.369C2.58 15.84 2.228 13.94 2.228 12c0-5.388 4.384-9.772 9.772-9.772 2.612 0 5.066 1.017 6.91 2.86s2.86 4.297 2.86 6.91c0 5.387-4.384 9.772-9.772 9.772z" />
-    </svg>
-    WhatsApp
-  </a>
+  <div class="container">
+    <span class="badge">Disponible · Vivienda + Local · Entrega inmediata</span>
+    <h1>Alquiler Primer Piso</h1>
+    <p class="subtitle">Viviendas del Sur · Itagüí</p>
+    <div class="pill-price">💰 <strong>$1.800.000</strong> COP/mes</div>
+    <ul class="features" aria-label="Características principales">
+      <li>🏠 Vivienda con local</li>
+      <li>📐 Primer piso</li>
+      <li>🛁 2 baños</li>
+      <li>🛏️ 2–3 habitaciones</li>
+      <li>🧺 Zona de ropas / patio</li>
+      <li>🍳 Cocina completa</li>
+      <li>🚗 Garaje</li>
+      <li>🛋️ Sala amplia</li>
+      <li>🐶 Se permiten mascotas</li>
+      <li>⚽ Al lado de la cancha sintética</li>
+    </ul>
+    <section class="cta-wrap" aria-label="Contacto">
+      <h3 class="cta-title">
+        <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M2 6a2 2 0 012-2h3l2 2h10a2 2 0 012 2v9a2 2 0 01-2 2H4a2 2 0 01-2-2V6z"/></svg>
+        Solicitar información
+      </h3>
+      <div class="cta-row">
+        <a class="btn btn-wa" target="_blank" rel="noopener"
+           href="https://api.whatsapp.com/send/?phone=573114982807&text=Hola,%20estoy%20interesad@%20en%20la%20vivienda%20con%20local%20(primer%20piso)%20en%20Viviendas%20del%20Sur.%20Veo%20que%20el%20precio%20es%20de%20$1.800.000%20COP%2Fmes.%0A%0AA%20continuaci%C3%B3n%20env%C3%ADo%20la%20informaci%C3%B3n%20solicitada%20para%20que%20la%20aseguradora%20SURA%20pueda%20verificar%20si%20soy%20apto%20para%20el%20arriendo:%0A%0ADatos%20del%20inquilino:%0ANombre:%0AC%C3%A9dula:%0AFecha%20de%20nacimiento:%0AFecha%20de%20expedici%C3%B3n%20de%20la%20c%C3%A9dula:%0APa%C3%ADs%20de%20nacimiento:%0ACorreo%20electr%C3%B3nico:%0AN%C3%BAmero%20de%20tel%C3%A9fono:"
 
-  <header class="container header">
-    <div class="brand">
-      <span class="badge">Disponible</span>
-      <h1>Alquiler de Apartamento</h1>
-      <p class="subtitle">Viviendas del Sur · Itagüí</p>
-    </div>
-  </header>
-
-  <main class="container">
-    <section class="card grid">
-      <div class="intro">
-        <h2>Conócelo en 30&nbsp;segundos</h2>
-        <p>Mira el video, ubícate en el mapa y escríbeme por WhatsApp. 📲</p>
-        <a class="cta" target="_blank" rel="noopener"
-          href="https://api.whatsapp.com/send/?phone=573114982807&text=Hola,%20estoy%20interesad@%20en%20el%20piso%20en%20Viviendas%20del%20Sur.%20%C2%BFPodr%C3%ADa%20darme%20m%C3%A1s%20informaci%C3%B3n?&type=phone_number">
-          Solicitar información por WhatsApp
-          <svg viewBox="0 0 24 24" aria-hidden="true" class="icon">
-            <path
-              d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.472-.148-.672.149-.198.297-.769.966-.943 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.607.134-.133.297-.347.446-.52.149-.173.198-.297.297-.495.099-.198.05-.372-.025-.521-.074-.149-.672-1.616-.92-2.215-.243-.584-.489-.505-.672-.514l-.573-.01c-.198 0-.521.074-.793.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.095 3.2 5.076 4.487.709.306 1.262.489 1.693.626.711.226 1.358.194 1.87.118.571-.085 1.758-.718 2.006-1.41.248-.694.248-1.289.173-1.41-.074-.124-.272-.198-.57-.347z" />
-          </svg>
+           aria-label="Contactar por WhatsApp">
+          <span class="ring" aria-hidden="true"></span>
+          <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.472-.148-.672.149-.198.297-.769.966-.943 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.607.134-.133.297-.347.446-.52.149-.173.198-.297.297-.495.099-.198.05-.372-.025-.521-.074-.149-.672-1.616-.92-2.215-.243-.584-.489-.505-.672-.514l-.573-.01c-.198 0-.521.074-.793.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.095 3.2 5.076 4.487.709.306 1.262.489 1.693.626.711.226 1.358.194 1.87.118.571-.085 1.758-.718 2.006-1.41.248-.694.248-1.289.173-1.41-.074-.124-.272-.198-.57-.347zM20.52 3.48C18.192 1.153 15.21 0 12 0 5.373 0 0 5.373 0 12c0 2.116.553 4.17 1.604 5.98L0 24l6.187-1.594C7.985 23.447 10.018 24 12 24c6.627 0 12-5.373 12-12 0-3.21-1.153-6.192-3.48-8.52z"/></svg>
+          WhatsApp
         </a>
-        <br />
-        <br />
-
-
-        <section class="map-card card" style="max-width: 500px; margin: 0 auto;">
-          <h3 class="section-title">Ubicación en el mapa</h3>
-          <div class="map"
-            style="aspect-ratio: 4/3; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 25px rgba(0,0,0,0.3);">
-            <iframe title="Mapa - Viviendas del Sur"
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.6662585346744!2d-75.6028802!3d6.1719461!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e46825d7b2a29ff%3A0xb87ff7bfdfef2a55!2sCl.%2084A%20%2356-22%2C%20Itag%C3%BCi%2C%20Antioquia!5e0!3m2!1ses!2sco!4v1691799000000!5m2!1ses!2sco"
-              width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-          </div>
-          <p class="subtitle" style="margin-top:10px; text-align:center;">
-            Dirección: Cl. 84A #56-22, Vivendas del Sur, Itagüí
-            — <a href="https://www.google.com/maps/place/Cl.+84A+%2356-22,+Vivendas+del+Sur,+Itag%C3%BCi,+Antioquia/"
-              target="_blank" rel="noopener" style="color:#38bdf8; text-decoration:underline;">
-              Abrir en Google Maps
-            </a>
-          </p>
-        </section>
-
-      </div>
-      <div class="video-wrap">
-        <div class="video">
-          <iframe title="Video del Apartamento" src="https://www.youtube.com/embed/9MOdZNegc2A"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen loading="lazy"></iframe>
-        </div>
+        <a class="btn btn-call" href="tel:+573114982807" aria-label="Llamar al 3114982807">
+          <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M6.62 10.79a15.053 15.053 0 006.59 6.59l2.2-2.2a1 1 0 011.01-.24c1.12.37 2.33.57 3.58.57a1 1 0 011 1V21a1 1 0 01-1 1C10.4 22 2 13.6 2 3a1 1 0 011-1h4.5a1 1 0 011 1c0 1.25.2 2.46.57 3.58a1 1 0 01-.24 1.01l-2.21 2.2z"/></svg>
+          Llamar 3114982807
+        </a>
       </div>
     </section>
-
-    <section class="details card">
-      <h3 class="section-title">Detalles rápidos</h3>
-      <ul class="features">
-        <li>📍 Zona: Viviendas del Sur (Itagüí)</li>
-        <li>🛏️ Ideal para 1–3 personas</li>
-        <li>💬 Respuesta rápida por WhatsApp</li>
-      </ul>
-      <a class="cta cta-secondary" target="_blank" rel="noopener"
-        href="https://api.whatsapp.com/send/?phone=573114982807&text=Hola,%20estoy%20interesad@%20en%20el%20piso%20en%20Viviendas%20del%20Sur.%20%C2%BFPodr%C3%ADa%20darme%20m%C3%A1s%20informaci%C3%B3n?&type=phone_number">Quiero
-        más información</a>
-    </section>
-
-
-
-  </main>
-
-  <footer class="container footer">
-    <small>© <span id="y"></span> Alquiler Viviendas del Sur · Hecho con ❤️</small>
-  </footer>
-
-  <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
+    <div class="grid" style="margin-top: 24px;">
+      <div>
+        <h3>Ubicación en el mapa</h3>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.6662585346744!2d-75.6028802!3d6.1719461!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e46825d7b2a29ff%3A0xb87ff7bfdfef2a55!2sCl.%2084A%20%2356-22%2C%20Itag%C3%BCi%2C%20Antioquia!5e0!3m2!1ses!2sco!4v1691799000000!5m2!1ses!2sco" style="aspect-ratio: 4/3;"></iframe>
+      </div>
+      <div>
+        <h3>Video del inmueble</h3>
+        <iframe src="https://www.youtube.com/embed/9MOdZNegc2A" allowfullscreen loading="lazy" style="aspect-ratio: 9/16;"></iframe>
+      </div>
+    </div>
+  </div>
 </body>
-
 </html>
