Corregir mensaje de participación en la rifa para mayor claridad

--- a/artemente/index.html
+++ b/artemente/index.html
@@ -106,7 +106,7 @@
     const WHATS_NUMBER = "573127302963"; // Ejemplo, ajusta si es diferente
     // Mensaje predeterminado para WhatsApp
     const WHATS_MSG = encodeURIComponent(
-      "Hola 👋, quiero participar en la *Rifa ArtemenTe: Conecta con tu Energía Creativa*. ¿Qué números tienes disponibles?"
+      "Hola 👋, quiero participar en la *Rifa Artemente*: Conecta con tu Energía Creativa. ¿Qué números tienes disponibles?"
     );
     // ID de tu Google Sheet (asegúrate de que sea público o que la API de Google Sheets tenga permisos)
     const SHEET_ID = "1GxjtQxIKo0Z4YMQr09dNTQRIXET-iCT-IlEldU6cXsw";
